--- a/app.yaml
+++ b/app.yaml
@@ -1,6 +1,6 @@
 runtime: python311
 
-entrypoint: uvicorn api.main:app --host 0.0.0.0 --port 8080
+entrypoint: uvicorn api.main_projet8:app --host 0.0.0.0 --port 8080
 
 # handlers:
 # - url: /.*
